--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -33,6 +33,7 @@ form{
   padding: 15px;
   width: 300px;
   border-radius: 10px;
+  box-shadow: 4px 4px 16px rgb(231, 231, 231);
 }
 
 ul{
@@ -81,7 +82,7 @@ button:active .button_top {
   height: 36px;
   padding: 0px 6px;
   border-radius: 12px;
-  border: 1.5px solid lightgrey;
+  border: 2px solid lightgrey;
   outline: none;
   transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
   box-shadow: 0px 0px 20px -18px;
